@@ -33,16 +33,6 @@
       (load truename))))
 
 
-
-(defun exit-clfswm ()
-  "Exit clfswm"
-  (throw 'exit-clfswm nil))
-
-(defun reset-clfswm ()
-  "Reset clfswm"
-  (throw 'exit-main-loop nil))
-
-
 (defun reload-clfswm ()
   "Reload clfswm"
   (format t "~&-*- Reloading CLFSWM -*-~%")
